update readMe and missing icon

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link href="stylesheets/style.css" rel="stylesheet">
-    <link href="stylesheets/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -59,7 +59,7 @@
       <p id="instance-id" style="display: none;">Instance ID: <span id="instance-id-value"></span></p>
     </div>
 
-      <br></hr>
+      <br><br><hr/>
       <div class="footerOuter">
         <footer>
           Made with <i class="fa fa-heart" aria-hidden="true"></i> by The Bluemix Developer Advocacy team</br>
